Clean up CVS ,v files. This will compile but doesn't seem to do anything yet.